--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "dbshop-1",
   "version": "1.0.0",
   "description": "dbshop",
-  "main": "index.js",
+  "main": "src/index",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/index --exec babel-node --presets-env"
   },
   "repository": {
     "type": "git",
@@ -17,10 +18,12 @@
   },
   "homepage": "https://github.com/Martin-Blazeski/dbshop#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt": "^3.0.6",
     "bluebird": "^3.5.5",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "eslint": "^6.1.0",
     "express": "^4.17.0",
     "helmet": "^3.18.0",
     "jsonwebtoken": "^8.5.1",
@@ -28,9 +31,9 @@
     "mysql": "^2.17.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
+    "babel-cli": "^6.26.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-flow-comments": "^6.22.0",
@@ -40,7 +43,6 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "^6.23.0",
     "babel-register": "^6.26.0",
-    "eslint": "^5.16.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-flowtype": "^3.9.0",
     "eslint-plugin-flowtype-errors": "^4.1.0",
